fixing various bugs in dark mode

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -10,7 +10,17 @@
 .dark {
   --background: #0a0a0a;
   --foreground: #ffffff;
+  --infoWindowBackground: #394150;
 }
+
+.gm-style .gm-style-iw-d::-webkit-scrollbar-track, 
+.gm-style .gm-style-iw-d::-webkit-scrollbar-track-piece,
+.gm-style .gm-style-iw-c,
+.gm-style .gm-style-iw-t::after,
+.gm-style .gm-style-iw-tc::after { 
+  background: var(--infoWindowBackground, white);
+}
+
 
 body {
   color: var(--foreground);
